# nutrimind

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/agents/: __init__.py  cli.py  macros.py  memory.py  nutrition_agent.py  proactive.py  prompts.py  prompts_store.py  trends.py  usage.py
backend/app/: auth.py  authz.py  config.py  main.py  scheduler.py  schemas.py  settings_store.py  telegram_bot.py
backend/db/: base.py  models.py
backend/mcp_clients/: registry.py
backend/tests/: test_agent_loop.py  test_auth.py  test_authz.py  test_memory.py  test_proactive.py  test_prompts.py  test_settings.py  test_smoke.py  test_usage.py
mcp/cronometer/: Dockerfile  README.md  pyproject.toml  smoke_test.py
mcp/cronometer/src/cronometer_mcp/: __init__.py  client.py  server.py
mcp/google_health/: README.md  mcp.json  run.sh
web/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css  main.jsx
web/src/components/: Layout.jsx
web/src/lib/: api.js  theme.jsx
web/src/pages/: Activity.jsx  Admin.jsx  Chat.jsx  Dashboard.jsx  Login.jsx  Pantry.jsx  Pending.jsx  Prompts.jsx  Settings.jsx
