[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutrimind-backend"
version = "0.1.0"
description = "NutriMind backend — FastAPI + Postgres + MCP client wiring for the health assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "litellm>=1.55.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10,<4",
]

[project.scripts]
nutrimind-backend = "app.main:run"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "db", "agents", "mcp_clients"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
